change all image name into media (this is pain). change text size from 4em to 2 em. split image text into media tag and media text

--- a/AdsWeb/fileUploadPage.html
+++ b/AdsWeb/fileUploadPage.html
@@ -11,15 +11,15 @@
 <body>
     <form action="fileUpload.php" method="post" 
         enctype="multipart/form-data">
-        <label for="images[]">Select Image Files:</label>
-        <input type="file" name="images[]" multiple>
+        <label for="media[]">Select Media Files:</label>
+        <input type="file" name="media[]" multiple>
         <br><br>
-        <label for="folder_name">folder name</label>
-        <input type="text" name="folder_name">
+        <label for="media_tag">Tag</label>
+        <input type="text" name="media_tag">
         <br><br>
-        <!--<label for="file_decs">Deskripsi</label>
-        <input type="text" name="file_decs">
-        <br><br> -->
+        <label for="media_txt">Deskripsi Default</label>
+        <input type="text" name="media_txt">
+        <br><br>
         <label for="exp_date">Expired Date:</label>
         <input type="datetime-local" id="exp_date" name="exp_date">
         <br><br>
