--- a/AdsWeb/home.html
+++ b/AdsWeb/home.html
@@ -11,7 +11,7 @@ margin: 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 3px;
-  background: crimson;
+  background: #4CAF50;
 }
 
 :where(.left, .right) {
@@ -20,7 +20,7 @@ margin: 0;
 }
 
 :where(.left, .right):hover {
-  background: crimson;
+  background: #4CAF50;
 }
 
 #grid:has(.left:hover) {
@@ -43,6 +43,8 @@ margin: 0;
 <div class="left" onclick="window.open('./login.php', '_self')"> home</div>
 <div class="right" onclick="window.open('./slideShowGet.php', '_self')">view</div>
 </div>
+
+
 </body>
 
 </html>
