--- a/AdsWeb/home.html
+++ b/AdsWeb/home.html
@@ -41,7 +41,7 @@ margin: 0;
 <body>
 <div id="grid">
 <div class="left" onclick="window.open('./login.php', '_self')"> home</div>
-<div class="right" onclick="window.open('./slideShowGet.php', '_self')">view</div>
+<div class="right" onclick="window.open('./slideShowPage.php', '_self')">view</div>
 </div>
 
 
