chagne the struckture of the file, making each table has their own folder, adding folder to login , adding, adding function folder, the function has switch now, IF ONLY HE SAID ALL THE  REQUIREMENT ON THE FRONT. there is a lot of way to deal with this, this is a patch , i should have made them with switch.

--- a/AdsWeb/Login/home.html
+++ b/AdsWeb/Login/home.html
@@ -40,8 +40,8 @@ margin: 0;
 
 <body>
 <div id="grid">
-<div class="left" onclick="window.open('./login.php', '_self')"> home</div>
-<div class="right" onclick="window.open('./slideShowPage.php', '_self')">view</div>
+<div class="left" onclick="window.open('../Login/login.php', '_self')"> home</div>
+<div class="right" onclick="window.open('../Ads/slideShowPage.php', '_self')">view</div>
 </div>
 
 
