--- a/AdsWeb/Login/homeUser.html
+++ b/AdsWeb/Login/homeUser.html
@@ -9,15 +9,15 @@
 </head>
 
 <body>
-    <form action="./fileView.php" method="post" 
+    <form action="../Ads/fileView.php" method="post" 
         enctype="button">
         <input type="submit" name="submit" value="manage Ads">
     </form>
-    <form action="./fileUploadpage.html" method="post" 
+    <form action="../Ads//fileUploadpage.html" method="post" 
         enctype="button">
         <input type="submit" name="submit" value="upload Ads">
     </form>
-    <form action="./logout.php" method="post" 
+    <form action="../Login/logout.php" method="post" 
         enctype="button">
         <input type="submit" name="submit" value="log out">
     </form>
