--- a/AdsWeb/Login/login.html
+++ b/AdsWeb/Login/login.html
@@ -105,7 +105,7 @@ body {
 <body>
     <div class="login-page">
         <div class="form">
-          <form class="login-form" action="login.php" method="post" enctype="multipart/form-data">
+          <form class="login-form" action="./login.php" method="post" enctype="multipart/form-data">
             <input type="text" name="user_name" placeholder="username"/>    
             <input type="password" name="password" placeholder="password"/>
             <button>login</button>
