Add comon function to gotohome , gotohomeuser, gotoview, change every single thing to use the function. fix a few stuff about not having the right path .

--- a/AdsWeb/Ads/fileUploadPage.html
+++ b/AdsWeb/Ads/fileUploadPage.html
@@ -26,7 +26,7 @@
     <br><br>
     <input type="submit" name="submit" value="Upload">
 </form>
-<form action="../Login/homeUser.html" method="post" 
+<form action="../homeUser.html" method="post" 
     enctype="button">
     <input type="submit" name="submit" value="cancel">
 </form>
