--- a/AdsWeb/Doctor/Schedule/fileUploadPage.html
+++ b/AdsWeb/Doctor/Schedule/fileUploadPage.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<form action="fileUpload.php" method="post" 
+<form action="./fileUpload.php" method="post" 
     enctype="multipart/form-data">
     <label for="media[]">Select Media Files:</label>
     <input type="file" name="media[]" multiple>
@@ -26,7 +26,7 @@
     <br><br>
     <input type="submit" name="submit" value="Upload">
 </form>
-<form action="./homeUser.html" method="post" 
+<form action="../../homeUser.html" method="post" 
     enctype="button">
     <input type="submit" name="submit" value="cancel">
 </form>
