--- a/AdsWeb/home.html
+++ b/AdsWeb/home.html
@@ -47,7 +47,7 @@ margin: 0;
 
 <body>
 <div id="grid">
-<div class="left" onclick="window.open('./Login/login.php', '_self')"> home</div>
+<div class="left" onclick="window.open('./Login/login.html', '_self')"> home</div>
 <div class="center" onclick="window.open('./Doctor/slideDoctorPage.php', '_self')"> view Doctor</div>
 <div class="right" onclick="window.open('./Ads/slideShowPage.php', '_self')">view Ads</div>
 </div>
