--- a/AdsWeb/Doctor/Schedule/fileUploadPage.html
+++ b/AdsWeb/Doctor/Schedule/fileUploadPage.html
@@ -11,9 +11,21 @@
 <body>
 <form action="./fileUpload.php" method="post" 
     enctype="multipart/form-data">
-    <label for="sch_tag">Tag</label>
-    <input type="text" name="sch_tag">
-    <br><br>
+    <label>Day</label><br>
+    <input type="radio" id="Monday" name="sch_day" value="Monday">
+    <label for="Monday">Monday</label><br>
+    <input type="radio" id="Tuesday" name="sch_day" value="Tuesday">
+    <label for="Tuesday">Tuesday</label><br>
+    <input type="radio" id="Wednesday" name="sch_day" value="Wednesday">
+    <label for="Wednesday">Wednesday</label><br>
+    <input type="radio" id="Thursday" name="sch_day" value="Thursday">
+    <label for="Thursday">Thursday</label><br>
+    <input type="radio" id="Friday" name="sch_day" value="Friday">
+    <label for="Friday">Friday</label><br>
+    <input type="radio" id="Saturday" name="sch_day" value="Saturday">
+    <label for="Saturday">Saturday</label><br>
+    <input type="radio" id="Sunday" name="sch_day" value="Sunday">
+    <label for="Sunday">Sunday</label><br>
     <label for="sch_txt">Deskripsi Default</label>
     <br><br>
     <textarea id="sch_txt" name="sch_txt" rows="13"  maxlength="254" ></textarea>
