add required for many form.  fixing why the slide didn't start with the first one rather the second. chang sch_tag into sch_day, split sch_txt into sch_start and sch_end, update the form of schedule so it only recieve day and time start and end. change fileuploadpage of schedule from html into php. add add schedule column into schedule page. in server function add view active txt that innerjoin between doctor and scedule table. the view ads now using uuid to tract rather than id. add sch_start and sch_end and doc_uuid into tbschedule.

--- a/AdsWeb/Ads/fileUploadPage.html
+++ b/AdsWeb/Ads/fileUploadPage.html
@@ -12,7 +12,7 @@
 <form action="fileUpload.php" method="post" 
     enctype="multipart/form-data">
     <label for="media[]">Select Media Files:</label>
-    <input type="file" name="media[]" multiple>
+    <input type="file" name="media[]" multiple required>
     <br><br>
     <label for="media_tag">Tag</label>
     <input type="text" name="media_tag">
@@ -22,7 +22,7 @@
     <textarea id="media_txt" name="media_txt" rows="13"  maxlength="254" ></textarea>
     <br><br>
     <label for="exp_date">Expired Date:</label>
-    <input type="datetime-local" id="exp_date" name="exp_date">
+    <input type="datetime-local" id="exp_date" name="exp_date" required>
     <br><br>
     <input type="submit" name="submit" value="Upload">
 </form>
