--- a/AdsWeb/Doctor/fileUploadPage.html
+++ b/AdsWeb/Doctor/fileUploadPage.html
@@ -12,10 +12,10 @@
 <form action="./fileUpload.php" method="post" 
     enctype="multipart/form-data">
     <label for="wajah">Select Face:</label>
-    <input type="file" name="wajah" >
+    <input type="file" name="wajah" required>
     <br><br>
-    <label for="doc_tag">Tag</label>
-    <input type="text" name="doc_tag">
+    <label for="doc_tag">Name</label>
+    <input type="text" name="doc_tag"required required>
     <br><br>
     <label for="doc_txt">Deskripsi Default</label>
     <br><br>
