add cancel button to login, add limit and offset function for media and doc, change day naming into Bahasa

--- a/AdsWeb/Login/login.html
+++ b/AdsWeb/Login/login.html
@@ -110,6 +110,7 @@ body {
             <input type="password" name="password" placeholder="password"/>
             <button>login</button>
           </form>
+          <p class="message"> <a href="../home.html">Cancel</a></p>
         </div>
     </div>
 </body>
