change the homeuser to navbar, add navbar to every view, add register, change requirement for certain table, add doc spe for later tag, fix useradd, add view folder and its file, remove folder view for doctor and schedule

--- a/AdsWeb/Doctor/fileUploadPage.html
+++ b/AdsWeb/Doctor/fileUploadPage.html
@@ -14,8 +14,11 @@
     <label for="wajah">Select Face:</label>
     <input type="file" name="wajah" required>
     <br><br>
-    <label for="doc_tag">Name</label>
-    <input type="text" name="doc_tag"required required>
+    <label for="doc_name">Name</label>
+    <input type="text" name="doc_name"required>
+    <br><br>
+    <label for="doc_spe">Spesialis </label>
+    <input type="text" name="doc_spe">
     <br><br>
     <label for="doc_txt">Deskripsi Default</label>
     <br><br>
