--- a/AdsWeb/Ads/fileUploadPage.html
+++ b/AdsWeb/Ads/fileUploadPage.html
@@ -131,15 +131,23 @@
             <div class="dropdown-content">
                 <a href="../Ads/fileUploadpage.html">Upload</a>
                 <a href="../Ads/folderView.php">View Folder</a>
+                <a href="../Ads/ViewAll.php">View All</a>
+                
             </div>
             </li>
         <li class="dropdown">
             <a href="../Doctor/fileView.php" class="dropbtn">Doctor</a>
             <div class="dropdown-content">
             <a href="../Doctor/fileUploadpage.html">Upload</a>
+            <a href="../Doctor/ViewAll.php">View All</a>
             </div>
         </li>
-        <li ><a href="../Doctor/Schedule/fileView.php">Schedule</a></li>
+        <li class="dropdown">
+          <a href="../Doctor/Schedule/fileView.php" class="dropbtn">Schedule</a>
+          <div class="dropdown-content">
+            <a href="../Doctor/Schedule/ViewAll.php">View All</a>
+          </div>
+        </li>
         <li style="float: right;"><a href="../Login/logout.php">Log Out</a></li>
     </ul>
 </div>
