--- a/AdsWeb/Doctor/fileUploadPage.html
+++ b/AdsWeb/Doctor/fileUploadPage.html
@@ -132,15 +132,22 @@
             <div class="dropdown-content">
                 <a href="../Ads/fileUploadpage.html">Upload</a>
                 <a href="../Ads/folderView.php">View Folder</a>
+                <a href="../Ads/ViewAll.php">View All</a>
             </div>
             </li>
         <li class="dropdown">
             <a href="../Doctor/fileView.php" class="dropbtn">Doctor</a>
             <div class="dropdown-content">
             <a href="../Doctor/fileUploadpage.html">Upload</a>
+            <a href="../Doctor/ViewAll.php">View All</a>
             </div>
         </li>
-        <li ><a href="../Doctor/Schedule/fileView.php">Schedule</a></li>
+        <li class="dropdown">
+            <a href="../Doctor/Schedule/fileView.php" class="dropbtn">Schedule</a>
+            <div class="dropdown-content">
+              <a href="../Doctor/Schedule/ViewAll.php">View All</a>
+            </div>
+          </li>
         <li style="float: right;"><a href="../Login/logout.php">Log Out</a></li>
     </ul>
 </div>
@@ -179,7 +186,7 @@
         </div>
         </div>
         <div class="row">
-        <input type="submit" value="submit" value="Upload" enctype="button">
+        <input type="submit" name="submit" value="Upload">
         </form>
         <form action="../homeUser.html" method="post" enctype="button">
             <input type="submit" name="submit" value="cancel" style="background-color: crimson;float:left">
