--- a/AdsWeb/Ads/fileUploadPage.html
+++ b/AdsWeb/Ads/fileUploadPage.html
@@ -119,7 +119,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content=
         "width=device-width, initial-scale=1.0">
-    <title>File Upload</title>
+    <title>Media Upload</title>
 </head>
 
 <body>
