resize the manage image and vidio in both media and doctor

--- a/AdsWeb/Ads/fileUploadPage.html
+++ b/AdsWeb/Ads/fileUploadPage.html
@@ -174,7 +174,7 @@
             <label for="media_txt">Deskripsi Default</label>
         </div>
         <div class="col-75">
-            <textarea id="media_txt" name="media_txt" rows="13"  maxlength="254" style="height:200px"></textarea>
+            <textarea id="media_txt" name="media_txt" rows="5"  maxlength="254"></textarea>
         </div>
         </div>
         <div class="row">
