--- a/AdsWeb/Doctor/fileUploadPage.html
+++ b/AdsWeb/Doctor/fileUploadPage.html
@@ -182,7 +182,7 @@
             <label for="doc_txt">Deskripsi Default</label>
         </div>
         <div class="col-75">
-            <textarea id="doc_txt" name="doc_txt" rows="13"  maxlength="254" style="height:200px"></textarea>
+            <textarea id="doc_txt" name="doc_txt" rows="5"  maxlength="254"></textarea>
         </div>
         </div>
         <div class="row">
