Fix register add name into the slide. add more function to support the name in slide. the home change name oh home into enrty and ads into media

--- a/AdsWeb/home.html
+++ b/AdsWeb/home.html
@@ -73,9 +73,9 @@ p {
 
 <body>
 <div id="grid">
-<div class="left" onclick="window.open('./Login/login.html', '_self')"><p> Home</p><img src="./Img/Home.png" ></div>
+<div class="left" onclick="window.open('./Login/login.html', '_self')"><p> Entry</p><img src="./Img/Home.png" ></div>
 <div class="center" onclick="window.open('./Doctor/slideDoctorPage.php', '_self')"><p>view Doctor</p><img src="./Img/Doctor.jpg" ></div>
-<div class="right" onclick="window.open('./Ads/slideShowPage.php', '_self')"><p>view Ads</p><img src="./Img/Media.jpg" ></div>
+<div class="right" onclick="window.open('./Ads/slideShowPage.php', '_self')"><p>view Media</p><img src="./Img/Media.jpg" ></div>
 </div>
 
 
